Minor updates to figure references

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -2230,10 +2230,10 @@ where X is a specific implementation
 \item Figure~\ref{fig:scheduling-policy}
 Missing:  Some sort of comparison of different scheduling policies
 
-\item Figure~\ref{fig:queue-cache-size},
+\item Figure~\ref{fig:queue-cache-size-insertions} (top),
 Size of cache and queue data structures as a function of wall clock time
 
-\item Figure~\ref{fig:queue-cumulative},
+\item Figure~\ref{fig:queue-cache-size-insertions} (bottom),
 Cumulative number of things placed in queue over time
 
 \item Figure~\ref{fig:objective}, Objective value over time,
@@ -2325,7 +2325,7 @@ The bottom plot shows the cumulative number of cache insertions,
 which is equivalent to the cumulative number of queue insertions,
 as a function of wall clock time.
 }
-\label{fig:queue-cache-size}
+\label{fig:queue-cache-size-insertions}
 \end{figure}
 
 \begin{comment}
