--- a/paper/content.tex
+++ b/paper/content.tex
@@ -1891,7 +1891,7 @@ By~\eqref{eq:similar-analogous},
 
 \end{proof}
 
-Theorem~\ref{thm:similar} implies that if prefix~$\Prefix$
+Theorem~\ref{thm:similar} implies that if prefixes~$\Prefix$
 and~$\PrefixB$ are similar, and we know the optimal objective
 of rule lists starting with~$\Prefix$, then
 \begin{align}
