Typo in similar support bound theorem statement

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -1802,7 +1802,7 @@ of data captured by~$\PrefixB$ and not captured by~$\Prefix$, \ie
 \label{eq:big-omega}
 \end{align}
 We can bound the difference between the objectives of the
-optimal rule lists in~$\StartsWith(\PrefixB)$
+optimal rule lists in~$\StartsWith(\Prefix)$
 and~$\StartsWith(\PrefixB)$ as follows:
 \begin{align}
 \min_{\RLB^\dagger \in \StartsWith(\PrefixB)} \Obj(\RLB^\dagger, \x, \y)
