--- a/paper/content.tex
+++ b/paper/content.tex
@@ -387,7 +387,7 @@ with respect to the objective lower bound of~$\RL$:
 b(\Prefix', \Labels', \x, \y)
   &= \Loss_p(\Prefix', \Labels', \x, \y) + \Reg (K + 1) \nn \\
 &= \frac{1}{N} \sum_{n=1}^N \sum_{k=1}^{K+1} \Cap(x_n, p_k \given \Prefix')
-  \wedge \one [ q_k \neq y_n ] + \Reg (K+1) \nn \\
+  \wedge \one [ q_k \neq y_n ] + \Reg (K+1) \label{eq:non-inc-lb} \\
 &= \Loss_p(\Prefix, \Labels, \x, \y) + \Reg K + \Reg
   + \frac{1}{N} \sum_{n=1}^N \Cap(x_n, p_{K+1} \given \Prefix') \wedge \one [q_{K+1} \neq y_n ] \nn \\
 &= b(\Prefix, \Labels, \x, \y) + \Reg
@@ -396,22 +396,32 @@ b(\Prefix', \Labels', \x, \y)
   \Cap(x_n, p_{K+1}) \wedge \one [q_{K+1} \neq y_n].
 \label{eq:inc-lb}
 \end{align}
-Notice that the term~${\neg\, \Cap(x_n, \Prefix)}$ in~\eqref{eq:inc-lb}
-depends only on~$\Prefix$, \ie it does not depend on~$\Prefix'$; furthermore,
-it is computed in the evaluation of~$\RL$'s default rule misclassification error,
+%Notice that the term~${\neg\, \Cap(x_n, \Prefix)}$ in~\eqref{eq:inc-lb}
+%depends only on~$\Prefix$, \ie it does not depend on~$\Prefix'$; furthermore,
+%it is computed in the evaluation of~$\RL$'s default rule misclassification error,
+%\begin{align}
+%\Loss_0(\Prefix, \Default, \x, \y) = \frac{1}{N}\sum_{n=1}^N \neg\, \Cap(x_n, \Prefix) \wedge \one [q_0 \neq y_n].
+%\end{align}
+Thus, if we store $b(\Prefix, \Labels, \x, \y)$, % and ${\neg\, \Cap(\x, \Prefix)}$,
+then we can reuse this quantity when computing $b(\Prefix', \Labels', \x, \y)$.
+%
+Transforming~\eqref{eq:non-inc-lb} into~\eqref{eq:inc-lb} yields a
+significantly simpler expression that is function of the stored
+quantity~$b(\Prefix, \Labels, \x, \y)$. %, as well as ${\neg\, \Cap(\x, \Prefix)}$
+%and the last rule of~$\RL'$, ${p_{K+1} \rightarrow q_{K+1}}$.
+%
+For the objective of~$\RL'$, first let us write a na\"ive expression:
 \begin{align}
-\Loss_0(\Prefix, \Default, \x, \y) = \frac{1}{N}\sum_{n=1}^N \neg\, \Cap(x_n, \Prefix) \wedge \one [q_0 \neq y_n].
+\Obj(\RL', \x, \y) &= \Loss(\RL', \x, \y) + \Reg (K + 1)
+= \Loss_p(\Prefix', \Labels', \x, \y) + \Loss_0(\Prefix', \Default', \x, \y) + \Reg(K + 1) \nn \\
+&= \frac{1}{N} \sum_{n=1}^N \sum_{k=1}^{K+1} \Cap(x_n, p_k \given \Prefix')
+  \wedge \one [ q_k \neq y_n ] + \frac{1}{N}\sum_{n=1}^N \neg\, \Cap(x_n, \Prefix') \wedge
+  \one [q'_0 \neq y_n] + \Reg (K+1). \label{eq:non-inc-obj}
 \end{align}
-Thus, if we store $b(\Prefix, \Labels, \x, \y)$ and ${\neg\, \Cap(\x, \Prefix)}$,
-then we can reuse these quantities when computing $b(\Prefix', \Labels', \x, \y)$.
-%
-The expression in~\eqref{eq:inc-lb} is a simple function of these stored quantities,
-as well as the last rule ${p_{K+1} \rightarrow q_{K+1}}$ of~$\RL'$.
-%
-Now, given the objective lower bound of~$\RL'$, we can compute its objective as:
+Now, given the objective lower bound of~$\RL'$, we can instead compute its objective as
 \begin{align}
-\Obj(\RL', \x, \y) &= \Loss(\RL', \x, \y) + \Reg (K + 1) \nn \\
-&= \Loss_p(\Prefix', \Labels', \x, \y) + \Loss_0(\Prefix', \Default', \x, \y) + \Reg(K + 1) \nn \\
+\Obj(\RL', \x, \y) &=  \Loss_p(\Prefix', \Labels', \x, \y) +
+  \Loss_0(\Prefix', \Default', \x, \y) + \Reg (K + 1) \nn \\
 &= b(\Prefix', \Labels', \x, \y) + \Loss_0(\Prefix', \Default', \x, y) \nn \\
 &= b(\Prefix', \Labels', \x, \y) + \frac{1}{N}\sum_{n=1}^N \neg\, \Cap(x_n, \Prefix') \wedge
   \one [q'_0 \neq y_n] \nn \\
@@ -419,9 +429,11 @@ Now, given the objective lower bound of~$\RL'$, we can compute its objective as:
   (\neg\, \Cap(x_n, p_{K+1})) \wedge \one [q'_0 \neq y_n].
 \label{eq:inc-obj}
 \end{align}
-The expression in~\eqref{eq:inc-obj} is a simple function of
-$b(\Prefix', \Labels', \x, \y)$, which we computed in~\eqref{eq:inc-lb},
-as well as the last antecedent~$p_{K+1}$ and default rule of~$\RL'$.
+The expression in~\eqref{eq:inc-obj} is much simpler than the na\"ive
+one in~\eqref{eq:non-inc-obj}, and is a function of
+$b(\Prefix', \Labels', \x, \y)$, which we computed in~\eqref{eq:inc-lb}.
+%as well as ${\neg\, \Cap(\x, \Prefix)}$,
+%and the last antecedent~$p_{K+1}$ and default rule~$\Default'$ of~$\RL'$.
 
 \subsection{Rule mining}
 \label{sec:rule-mining}
