--- a/paper/content.tex
+++ b/paper/content.tex
@@ -96,6 +96,11 @@ all rule lists whose prefixes start with~$\Prefix$:
 %We also say that an antecedent list~$\Prefix$ contains another
 %antecedent list~$\Prefix'$ if the antecedents in~$\Prefix'$ correspond to
 % a contiguous subsequence of antecedents anywhere in~$\Prefix$.
+%
+If ${\Prefix = (p_1, \dots, p_K)}$ and ${\Prefix' = (p_1, \dots, p_K, p_{K+1})}$
+are two prefixes such that~$\Prefix'$ starts with~$\Prefix$ and extends it by
+a single antecedent, we say that~$\Prefix$ is the parent of~$\Prefix'$
+and that~$\Prefix'$ is a child of~$\Prefix$.
 
 A rule list~$\RL$ classifies datum~$x_n$ by providing the label prediction~$q_k$
 of the first rule~$r_k$ whose antecedent~$p_k$ is true for~$x_n$.
@@ -120,19 +125,29 @@ with~$\Prefix$, then~$\Prefix'$ captures all the data that~$\Prefix$ captures:
 \{x_n: \Cap(x_n, \Prefix)\} \subseteq \{x_n: \Cap(x_n, \Prefix')\}.
 \label{eq:cap-subset}
 \end{align}
+%We also define ${\Cap(\x, \beta) = \{\Cap(x_n, \beta)\}_{n=1}^N} \in \{0, 1\}^N$
+%to be~$\beta$'s captures vector.
+%
 Now let~$\Prefix$ be an ordered list of antecedents,
 and let~$\beta$ be a subset of antecedents in~$\Prefix$.
 %
 Let us define~${\Cap(x_n, \beta \given \Prefix) = 1}$ if~$\beta$
 captures datum~$x_n$ in the context of~$\Prefix$,
 \ie if the first antecedent in~$\Prefix$ that evaluates to true for~$x_n$
-is an antecedent in~$\beta$,
-and~0 otherwise.
+is an antecedent in~$\beta$, and~0 otherwise.
 %
 Note that ${\Cap(x_n, \beta \given \Prefix) = 1}$ only if ${\Cap(x_n, \beta) = 1}$;
 ${\Cap(x_n, \beta \given \Prefix) = 0}$ either if ${\Cap(x_n, \beta) = 0}$,
 or if ${\Cap(x_n, \beta) = 1}$ but there is an antecedent~$\alpha$ in~$\Prefix$,
 preceding all antecedents in~$\beta$, such that ${\Cap(x_n, \alpha) = 1}$.
+%
+For example, if ${\Prefix = (p_1, \dots, p_k, \dots, p_K)}$ is a prefix, then
+\begin{align}
+\Cap(x_n, p_k \given \Prefix) =
+  \left(\bigwedge_{k'=1}^{k - 1} \neg\, \Cap(x_n, p_{k'}) \right)
+  \wedge \Cap(x_n, p_k)
+\end{align}
+indicates whether antecedent~$p_k$ captures datum~$x_n$ in the context of~$\Prefix$.
 %
 Now, define~${\Supp(\beta, \x)}$ to be the normalized support of~$\beta$,
 \begin{align}
@@ -281,23 +296,23 @@ set of antecedents ${\RuleSet = \{s_m\}_{m=1}^M}$,
 training data~$(\x, \y) = {\{(x_n, y_n)\}_{n=1}^N}$,
 initial best known rule list~$\InitialRL$ with objective~${\InitialObj = \Obj(\InitialRL, \x, \y)}$
 \State \textbf{Output:} Provably optimal rule list~$\OptimalRL$ with minimum objective~$\OptimalObj$
-\State $(\CurrentRL, \CurrentObj) \gets (\InitialRL, \InitialObj)$ \Comment{Initialize current best prefix and objective}
+\State $(\CurrentRL, \CurrentObj) \gets (\InitialRL, \InitialObj)$ \Comment{Initialize current best rule list and objective}
 \State $Q \gets $ queue$(\,[\,(\,)\,]\,)$ \Comment{Initialize queue with empty prefix}
 \While {$Q$ not empty} \Comment{Optimization complete when the queue is empty}
 	\State $\Prefix \gets Q$.pop(\,) \Comment{Remove a prefix~$\Prefix$ from the queue}
-	\If {$b(\Prefix, \x, \y) < \CurrentObj$} \Comment{\textbf{Bounding step}: Apply bound from Theorem~\ref{thm:bound}}
+	\If {$b(\Prefix, \x, \y) < \CurrentObj$} \Comment{\textbf{Bound}: Apply bound from Theorem~\ref{thm:bound}}
         \State $\Obj \gets \Obj(\RL, \x, \y)$ \Comment{Compute objective of~$\RL$, the rule list with prefix~$\Prefix$}
         \If {$\Obj < \CurrentObj$}
-            \State $(\CurrentRL, \CurrentObj) \gets (\RL, \Obj)$ \Comment{Update current best prefix and objective}
+            \State $(\CurrentRL, \CurrentObj) \gets (\RL, \Obj)$ \Comment{Update current best rule list and objective}
         \EndIf
         \For {$s$ in $\RuleSet$}
-            \If {$s$ not in $\Prefix$} \Comment{\textbf{Branching step}: Identify antecedents not in~$\Prefix$}
-                \State $Q$.push$(\,(\Prefix, s)\,)$ \Comment{and add corresponding extensions of~$\Prefix$ to the queue}
+            \If {$s$ not in $\Prefix$}
+                \State $Q$.push$(\,(\Prefix, s)\,)$ \Comment{\textbf{Branch}: Add~$\Prefix$'s children to the queue}
             \EndIf
         \EndFor
     \EndIf
 \EndWhile
-\State $(\OptimalRL, \OptimalObj) \gets (\CurrentRL, \CurrentObj)$ \Comment{Identify provably optimal prefix and objective}
+\State $(\OptimalRL, \OptimalObj) \gets (\CurrentRL, \CurrentObj)$ \Comment{Identify provably optimal rule list and objective}
 \end{algorithmic}
 \end{algorithm}
 
@@ -406,7 +421,7 @@ Thus, if we store $b(\Prefix, \Labels, \x, \y)$, % and ${\neg\, \Cap(\x, \Prefix
 then we can reuse this quantity when computing $b(\Prefix', \Labels', \x, \y)$.
 %
 Transforming~\eqref{eq:non-inc-lb} into~\eqref{eq:inc-lb} yields a
-significantly simpler expression that is function of the stored
+significantly simpler expression that is a function of the stored
 quantity~$b(\Prefix, \Labels, \x, \y)$. %, as well as ${\neg\, \Cap(\x, \Prefix)}$
 %and the last rule of~$\RL'$, ${p_{K+1} \rightarrow q_{K+1}}$.
 %
@@ -434,6 +449,46 @@ one in~\eqref{eq:non-inc-obj}, and is a function of
 $b(\Prefix', \Labels', \x, \y)$, which we computed in~\eqref{eq:inc-lb}.
 %as well as ${\neg\, \Cap(\x, \Prefix)}$,
 %and the last antecedent~$p_{K+1}$ and default rule~$\Default'$ of~$\RL'$.
+
+Explain how and why we group together a prefix's children \dots
+We summarize our incremental branch-and-bound procedure in Algorithm~\ref{alg:incremental}.
+
+\begin{algorithm}[t!]
+\caption{Incremental branch-and-bound for learning rule lists, for simplicity, from a cold start.}
+\label{alg:incremental}
+\begin{algorithmic}
+\normalsize
+\State \textbf{Input:} Objective function~$\Obj(\RL, \x, \y)$,
+objective lower bound~${b(\Prefix, \x, \y)}$,
+set of antecedents ${\RuleSet = \{s_m\}_{m=1}^M}$,
+training data~$(\x, \y) = {\{(x_n, y_n)\}_{n=1}^N}$,
+regularization parameter~$\Reg$
+\State \textbf{Output:} Provably optimal rule list~$\OptimalRL$ with minimum objective~$\OptimalObj$
+\State $\CurrentRL \gets ((), (), \Default, 0)$ \Comment{Initialize current best rule list with empty rule list}
+\State $\CurrentObj \gets \Obj(((), (), \Default, 0), \x, \y)$ \Comment{Initialize current best objective}
+\State $Q \gets $ queue$(\,[\,(\,)\,]\,)$ \Comment{Initialize queue with empty prefix}
+\State $C \gets $ cache$(\,[\,(\,(\,)\,, 0\,)\,]\,)$ \Comment{Initialize cache with empty prefix and its lower bound}
+\While {$Q$ not empty} \Comment{Optimization complete when the queue is empty}
+	\State $\Prefix \gets Q$.pop(\,) \Comment{Remove a prefix~$\Prefix$ from the queue}
+        \State $b(\Prefix, \x, \y) \gets C$.find$(\Prefix)$ \Comment{Retrieve $\Prefix$'s lower bound from the cache}
+        \For {$s$ in $\RuleSet$}
+            \If {$s$ not in $\Prefix$} \Comment{\textbf{Branch}: Evaluate $\Prefix$'s children}
+                \State $\PrefixB \gets (\Prefix, s)$
+                \State $b(\PrefixB, \x, \y) \gets $ \Call{IncLowerBound}{$b(\Prefix, \x, \y), s, \x, \y, \Reg$} \Comment{Incremental lower bound~\eqref{eq:inc-lb}}
+                \If {$b(\PrefixB, \x, \y) < \CurrentObj$} \Comment{\textbf{Bound}: Apply bound from Theorem~\ref{thm:bound}}
+                    \State $\Obj(\RLB, \x, \y) \gets $ \Call{IncObjective}{$b(\PrefixB, \x, \y), s, \x, \y$} \Comment{Incremental objective~\eqref{eq:inc-obj}}
+                    \If {$\Obj(\RLB, \x, \y) < \CurrentObj$}
+                        \State $(\CurrentRL, \CurrentObj) \gets (\RLB, \Obj(\RLB, \x, \y))$ \Comment{Update current best rule list and objective}
+                    \EndIf
+                    \State $Q$.push$(\PrefixB)$ \Comment{Add $\PrefixB$ to the queue}
+                    \State $C$.insert$(\PrefixB, b(\PrefixB, \x, \y))$ \Comment{Add $\PrefixB$ and its lower bound to the cache}
+                \EndIf
+            \EndIf
+        \EndFor
+\EndWhile
+\State $(\OptimalRL, \OptimalObj) \gets (\CurrentRL, \CurrentObj)$ \Comment{Identify provably optimal rule list and objective}
+\end{algorithmic}
+\end{algorithm}
 
 \subsection{Rule mining}
 \label{sec:rule-mining}
