--- a/paper/content.tex
+++ b/paper/content.tex
@@ -383,18 +383,18 @@ Now, we derive our incremental expressions for the objective function and its lo
 %
 Let ${\RL = (\Prefix, \Labels, \Default, K)}$ and
 ${\RL' = (\Prefix', \Labels', \Default', K + 1)}$
-be rule lists such that ${\Prefix = (p_1, \dots, p_K)}$,
-and prefix ${\Prefix' = (p_1, \dots, p_K, p_{K+1})}$ starts with~$\Prefix$.
+be rule lists such that prefix ${\Prefix = (p_1, \dots, p_K)}$
+is the parent of ${\Prefix' = (p_1, \dots, p_K, p_{K+1})}$.
 %
 Let ${\Labels = (q_1, \dots, q_K)}$ and
 ${\Labels' = (q_1, \dots, q_K, q_{K+1})}$ be the corresponding labels.
 %
 The hierarchical structure of Algorithm~\ref{alg:branch-and-bound}
 enforces that if we ever evaluate~$\RL'$, then we will have already
-evaluated both~$\RL$'s objective and objective lower bound.
+evaluated both the objective and objective lower bound of its parent,~$\RL$.
 %
 We would like to reuse as much of these computations as possible
-in our evaluation of~$\RL$.
+in our evaluation of~$\RL'$.
 %
 We can write the objective lower bound of~$\RL'$ incrementally,
 with respect to the objective lower bound of~$\RL$:
@@ -433,7 +433,8 @@ For the objective of~$\RL'$, first let us write a na\"ive expression:
   \wedge \one [ q_k \neq y_n ] + \frac{1}{N}\sum_{n=1}^N \neg\, \Cap(x_n, \Prefix') \wedge
   \one [q'_0 \neq y_n] + \Reg (K+1). \label{eq:non-inc-obj}
 \end{align}
-Now, given the objective lower bound of~$\RL'$, we can instead compute its objective as
+Instead, we can compute the objective of~$\RL'$ incrementally
+with respect to its objective lower bound:
 \begin{align}
 \Obj(\RL', \x, \y) &=  \Loss_p(\Prefix', \Labels', \x, \y) +
   \Loss_0(\Prefix', \Default', \x, \y) + \Reg (K + 1) \nn \\
@@ -449,9 +450,37 @@ one in~\eqref{eq:non-inc-obj}, and is a function of
 $b(\Prefix', \Labels', \x, \y)$, which we computed in~\eqref{eq:inc-lb}.
 %as well as ${\neg\, \Cap(\x, \Prefix)}$,
 %and the last antecedent~$p_{K+1}$ and default rule~$\Default'$ of~$\RL'$.
+Though we could compute the objective of~$\RL'$ incrementally
+with respect to that of~$\RL$, doing so would in practice require
+that we also store~$\Obj(\RL, \x, \y)$; we prefer the approach suggested
+by~\eqref{eq:inc-obj} since it avoids this additional storage overhead.
 
-Explain how and why we group together a prefix's children \dots
-We summarize our incremental branch-and-bound procedure in Algorithm~\ref{alg:incremental}.
+Algorithm~\ref{alg:incremental} integrates incremental computation
+into our branch-and-bound optimization procedure, and introduces
+a cache for storing prefixes and their objective lower bounds.
+%
+It additionally reorganizes the structure of Algorithm~\ref{alg:branch-and-bound}
+to group together the computations associated with all children of a particular prefix.
+%
+This has two advantages.
+%
+The first is to consolidate cache queries: all children of the same
+parent prefix compute their objective lower bounds with respect to
+the parent's stored value, and we only require one cache `find' operation
+for the entire group of children, instead of a separate query for each child.
+%
+The second is to shrink the queue's size:
+instead of adding all of a prefix's children as separate queue elements,
+we represent the entire group of children in the queue by a single element.
+%
+Since the number of children associated with each prefix
+is close to the total number of possible antecedents,
+both of these effects can yield significant savings.
+%
+For example, if we are trying to optimize over rule lists formed
+from a set of 1000 antecedents, then the maximum queue size in
+Algorithm~\ref{alg:incremental} will be smaller than that in
+Algorithm~\ref{alg:branch-and-bound} by a factor of nearly 1000.
 
 \begin{algorithm}[t!]
 \caption{Incremental branch-and-bound for learning rule lists, for simplicity, from a cold start.}
@@ -465,18 +494,18 @@ training data~$(\x, \y) = {\{(x_n, y_n)\}_{n=1}^N}$,
 regularization parameter~$\Reg$
 \State \textbf{Output:} Provably optimal rule list~$\OptimalRL$ with minimum objective~$\OptimalObj$
 \State $\CurrentRL \gets ((), (), \Default, 0)$ \Comment{Initialize current best rule list with empty rule list}
-\State $\CurrentObj \gets \Obj(((), (), \Default, 0), \x, \y)$ \Comment{Initialize current best objective}
+\State $\CurrentObj \gets \Obj(\CurrentRL, \x, \y)$ \Comment{Initialize current best objective}
 \State $Q \gets $ queue$(\,[\,(\,)\,]\,)$ \Comment{Initialize queue with empty prefix}
-\State $C \gets $ cache$(\,[\,(\,(\,)\,, 0\,)\,]\,)$ \Comment{Initialize cache with empty prefix and its lower bound}
+\State $C \gets $ cache$(\,[\,(\,(\,)\,, 0\,)\,]\,)$ \Comment{Initialize cache with empty prefix and its objective lower bound}
 \While {$Q$ not empty} \Comment{Optimization complete when the queue is empty}
 	\State $\Prefix \gets Q$.pop(\,) \Comment{Remove a prefix~$\Prefix$ from the queue}
-        \State $b(\Prefix, \x, \y) \gets C$.find$(\Prefix)$ \Comment{Retrieve $\Prefix$'s lower bound from the cache}
-        \For {$s$ in $\RuleSet$}
-            \If {$s$ not in $\Prefix$} \Comment{\textbf{Branch}: Evaluate $\Prefix$'s children}
-                \State $\PrefixB \gets (\Prefix, s)$
-                \State $b(\PrefixB, \x, \y) \gets $ \Call{IncLowerBound}{$b(\Prefix, \x, \y), s, \x, \y, \Reg$} \Comment{Incremental lower bound~\eqref{eq:inc-lb}}
+        \State $b(\Prefix, \x, \y) \gets C$.find$(\Prefix)$ \Comment{Look up $\Prefix$'s lower bound in the cache}
+        \For {$s$ in $\RuleSet$} \Comment{Evaluate all of $\Prefix$'s children}
+            \If {$s$ not in $\Prefix$}
+                \State $\PrefixB \gets (\Prefix, s)$ \Comment{\textbf{Branch}: Generate child $\PrefixB$}
+                \State $b(\PrefixB, \x, \y) \gets $ \Call{IncObjectiveLowerBound}{$b(\Prefix, \x, \y), s, \x, \y, \Reg$} \Comment{See~\eqref{eq:inc-lb}}
                 \If {$b(\PrefixB, \x, \y) < \CurrentObj$} \Comment{\textbf{Bound}: Apply bound from Theorem~\ref{thm:bound}}
-                    \State $\Obj(\RLB, \x, \y) \gets $ \Call{IncObjective}{$b(\PrefixB, \x, \y), s, \x, \y$} \Comment{Incremental objective~\eqref{eq:inc-obj}}
+                    \State $\Obj(\RLB, \x, \y) \gets $ \Call{IncObjective}{$b(\PrefixB, \x, \y), s, \x, \y$} \Comment{See~\eqref{eq:inc-obj}}
                     \If {$\Obj(\RLB, \x, \y) < \CurrentObj$}
                         \State $(\CurrentRL, \CurrentObj) \gets (\RLB, \Obj(\RLB, \x, \y))$ \Comment{Update current best rule list and objective}
                     \EndIf
