--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -42,6 +42,7 @@
 \def\RuleSet{S}
 \def\Cap{\textnormal{cap}}
 \def\Supp{\textnormal{supp}}
+\def\Count{\textnormal{sum}}
 \def\InitialObj{R^0}
 \def\InitialRL{d^0}
 \def\CurrentObj{{R^c}}
