Add logical queue figure to paper

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -2747,15 +2747,14 @@ as a function of wall clock time.
 \label{fig:queue-cache-size-insertions}
 \end{figure}
 
-\begin{comment}
 \begin{figure}[t!]
 \begin{center}
-\includegraphics[width=0.65\textwidth]{figs/sketch-queue-cumulative.png}
+\includegraphics[width=0.8\textwidth]{figs/ela-queue.png}
 \end{center}
-\caption{Cumulative number of things placed in queue over time}
-\label{fig:queue-cumulative}
+\caption{Logical queue composition.
+}
+\label{fig:queue}
 \end{figure}
-\end{comment}
 
 \begin{figure}[t!]
 \begin{center}
